test/ddc-spec/error/01-ErrorExp/23-PrivateNotRegion/Test.ds

module Test where

-- TODO: We also have a ErrorLetRegionsNotRegion message,
-- but the concrete grammar doesn't provide any way to exercise it.
foo {@a: Data} ()
 = extend a using r in ()
